--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "react-router": "^7.9.3",
     "react-router-dom": "^7.9.3",
+    "react-to-print": "^3.1.1",
     "recharts": "^3.2.1"
   },
   "devDependencies": {
